--- a/src/_patterns/01-core/06-themes/general/themes-xdark/_themes.xdark.scss
+++ b/src/_patterns/01-core/06-themes/general/themes-xdark/_themes.xdark.scss
@@ -11,6 +11,8 @@ $bolt-theme-xdark-link:         $bolt-theme-xdark-primary !default;
 $bolt-theme-xdark-heading-link: $bolt-theme-xdark-text !default;
 $bolt-theme-xdark-border:       rgba($bolt-theme-xdark-heading, $bolt-global-border-opacity);
 
+$bolt-theme-contrast-filter:    grayscale(100%) invert(100%) brightness(150%);
+
 .t-bolt-xdark {
   $bolt-theme-background:             $bolt-theme-xdark-background;
   $bolt-theme-primary:                $bolt-theme-xdark-primary;
@@ -49,7 +51,7 @@ $bolt-theme-xdark-border:       rgba($bolt-theme-xdark-heading, $bolt-global-bor
   $bolt-theme-primary-background-focus: mix($bolt-global-button-hover-color, $bolt-theme-primary-background-default, $bolt-global-button-hover-mix);
   $bolt-theme-primary-text-focus:       bolt-text-contrast($bolt-theme-primary-background-focus);
   $bolt-theme-primary-border-focus:     $bolt-theme-primary-background-focus;
-  
+
 
 
   --bolt-theme-background:   $bolt-theme-background;
@@ -73,7 +75,7 @@ $bolt-theme-xdark-border:       rgba($bolt-theme-xdark-heading, $bolt-global-bor
   --bolt-theme-heading-link-active: $bolt-theme-heading-link-active;
   --bolt-theme-heading-link-visited: $bolt-theme-heading-link-visited;
 
-  
+
   --bolt-theme-primary-background-default: $bolt-theme-primary-background-default;
   --bolt-theme-primary-text-default:       $bolt-theme-primary-text-default;
   --bolt-theme-primary-border-default:     $bolt-theme-primary-border-default;
@@ -89,6 +91,8 @@ $bolt-theme-xdark-border:       rgba($bolt-theme-xdark-heading, $bolt-global-bor
   --bolt-theme-primary-background-focus: $bolt-theme-primary-background-focus;
   --bolt-theme-primary-text-focus:       $bolt-theme-primary-text-focus;
   --bolt-theme-primary-border-focus:     $bolt-theme-primary-border-focus;
+
+  --bolt-theme-contrast-filter: $bolt-theme-contrast-filter;
 
   background-color: $bolt-theme-background;
   color: $bolt-theme-text;
