--- a/src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
+++ b/src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
@@ -2,10 +2,21 @@
 {% block demo_content %}
   {% include "@bolt/blockquote.twig" with {
     "theme": theme,
+    "size": "xxlarge",
+    "alignItems": "center",
+    "border": "horizontal",
+    "fullBleed": true,
+    "logo": {
+      "invert": true,
+      "src": "/images/sample/PayPal-logo.svg"
+    },
+    "content": "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
     "author": {
+      "image": {
+        "src": "/images/placeholders/500x500.jpg"
+      },
       "name": "Michelangelo di Lodovico Buonarroti Simoni",
       "title": "Renaissance Artist"
-    },
-    "content": "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>"
+    }
   } %}
 {% endblock %}
