--- a/src/_patterns/01-core/01-settings/settings-font-family/_settings.font-family.scss
+++ b/src/_patterns/01-core/01-settings/settings-font-family/_settings.font-family.scss
@@ -16,7 +16,7 @@
  * 2. This is for known system UI fonts & requires updates
  */
 $bolt-font-family--sans-fallback:
-  -apple-system, BlinkMacSystemFont, /* [1] */
+  serif, -apple-system, BlinkMacSystemFont, /* [1] */
   'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', /* [2] */
   'Helvetica Neue', sans-serif;
 $bolt-font-family--serif: 'Georgia', serif;
