--- a/src/_patterns/01-core/06-themes/general/themes-dark/_themes.dark.scss
+++ b/src/_patterns/01-core/06-themes/general/themes-dark/_themes.dark.scss
@@ -2,6 +2,11 @@
    THEMES - DARK
 \* ------------------------------------ */
 
+$bolt-export-data: false;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
+
 $bolt-theme-dark-background:   bolt-color(indigo) !default;
 $bolt-theme-dark-primary:      bolt-color(yellow) !default;
 $bolt-theme-dark-secondary:    bolt-color(white) !default;
