--- a/src/_patterns/01-core/06-themes/general/themes-light/_themes.light.scss
+++ b/src/_patterns/01-core/06-themes/general/themes-light/_themes.light.scss
@@ -2,6 +2,11 @@
    THEMES - LIGHT
 \* ------------------------------------ */
 
+$bolt-export-data: false;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
+
 $bolt-theme-light-background:   bolt-color(gray, xlight) !default;
 $bolt-theme-light-primary:      bolt-color(indigo, light) !default;
 $bolt-theme-light-secondary:    bolt-color(white) !default;
