--- a/src/_patterns/01-core/06-themes/general/themes-xlight/_themes.xlight.scss
+++ b/src/_patterns/01-core/06-themes/general/themes-xlight/_themes.xlight.scss
@@ -2,6 +2,11 @@
    THEMES - XLIGHT
 \* ------------------------------------ */
 
+$bolt-export-data: false;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
+
 $bolt-theme-xlight-background:   bolt-color(white) !default;
 $bolt-theme-xlight-primary:      bolt-color(indigo, light) !default;
 $bolt-theme-xlight-secondary:    bolt-color(white) !default;
