--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -4,7 +4,8 @@
 
 @import '@bolt/components-action-blocks';
 @import '@bolt/components-band';
-@import '@bolt/components-button';
+@import '@bolt/button';
+// @import '@bolt/components-button';
 @import '@bolt/components-button-group';
 @import '@bolt/components-blockquote';
 @import '@bolt/components-card';
