--- a/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -9,7 +9,10 @@
           contentItems: [
             {
               "pattern": "eyebrow",
-              "text": "Customer Retention"
+              "text": "Customer Retention",
+              "icon": {
+                "name": "product"
+              }
             },
             {
               "pattern": "headline",
