--- a/src/_patterns/01-core/02-tools/tools-font-family/_tools.font-family.scss
+++ b/src/_patterns/01-core/02-tools/tools-font-family/_tools.font-family.scss
@@ -22,14 +22,17 @@
   $fonts-loaded-class: map-get-deep($bolt-font-families, 'font-families', $type, 'loaded-class');
 
   font-family: $fallback-font-family;
+  font-family: var(--bolt-font-family-#{$type}, $fallback-font-family);
 
   @if $is_root == false {
     .#{$fonts-loaded-class} & {
+      --bolt-font-family-#{$type}: $custom-font-family;
       font-family: $custom-font-family;
     }
   }
   @else {
     &.#{$fonts-loaded-class} {
+      --bolt-font-family-#{$type}: $custom-font-family;
       font-family: $custom-font-family;
     }
   }
