--- a/src/_patterns/01-core/06-themes/general/themes-xdark/_themes.xdark.scss
+++ b/src/_patterns/01-core/06-themes/general/themes-xdark/_themes.xdark.scss
@@ -2,6 +2,11 @@
    THEMES - XDARK
 \* ------------------------------------ */
 
+$bolt-export-data: false;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
+
 $bolt-theme-xdark-background:   bolt-color(indigo, dark) !default;
 $bolt-theme-xdark-primary:      bolt-color(yellow) !default;
 $bolt-theme-xdark-secondary:    bolt-color(white) !default;
