--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -15,6 +15,7 @@
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
 @import '@bolt/components-logo';
+@import '@bolt/components-page-header';
 @import '@bolt/components-page-footer';
 @import '@bolt/components-site';
 @import '@bolt/components-ordered-list';
