--- a/src/_patterns/03-templates/default/default-template.twig
+++ b/src/_patterns/03-templates/default/default-template.twig
@@ -1,5 +1,5 @@
 
-
+{% block global_header %}{% endblock %}
 
 
 <div class="c-bolt-site__content c-bolt-site__content--middle"><!-- vertically center -->
