--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -1,3 +1,9 @@
+$bolt-export-data: false;
+
+@import '@bolt/settings-all'; // Global border radius
+@import '@bolt/tools-all'; // Global border radius
+
+
 bolt-icon {
   display: inline-block;
   display: inline-flex;
@@ -46,38 +52,30 @@ bolt-icon {
 }
 
 
-// By default background is transparent;
-.c-bolt-icon--background {
-  opacity: 0;
+.c-bolt-icon-wrapper {
+  position: relative;
 }
 
-.c-bolt-icon--circle-background {
-  .c-bolt-icon--xlarge & {
-    transform: scale(2, 2);
-    transform-origin: 50% 50%;
-  }
-}
+.c-bolt-icon__background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  transform: translate3d(-50%, -50%, 0);
 
-.c-bolt-icon--has-circle-background .c-bolt-icon--circle-background {
   opacity: 0.1;
   opacity: var(--bolt-theme-icon-background-opacity, 0.1);
 
-  fill: currentColor;
-  fill: var(--bolt-theme-icon-background-color, currentColor);
+  background-color: currentColor;
+  background-color: var(--bolt-theme-icon-background-color, currentColor);
 }
 
+.c-bolt-icon__circle-background {
+  border-radius: 50%;
+}
 
-
-
-// .c-bolt-icon--circle-background:before {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   opacity: 0.25;
-//   border-radius: 50%;
-//   content: '';
-//   width: 100%;
-//   height: 100%;
-// }
-
-
+.c-bolt-icon__square-background {
+  border-radius: $bolt-border-radius;
+}
