WIP: prototyping first 1/3 of Product Landing page.

--- a/src/_patterns/02-components/bolt-link/src/link.twig
+++ b/src/_patterns/02-components/bolt-link/src/link.twig
@@ -25,12 +25,18 @@
     {% set attributes = attributes.setAttribute('href', url) %}
   {% endif %}
 
-  <a {{ attributes }}>    
+  <a {{ attributes }}>
+    {% if icon and icon.position == "before" %}
+      <span class="c-bolt-link__icon">
+        {% include "@bolt/icon.twig" with icon only %}
+      </span>
+    {% endif %}
+
     <span class="c-bolt-link__text">
       {{ text | default(label) | default("Learn More") }}
     </span>
       
-    {% if icon %}
+    {% if icon and icon.position != "before" %}
       <span class="c-bolt-link__icon">
         {% include "@bolt/icon.twig" with icon only %}
       </span>
