chore: navbar setup

--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -19,6 +19,7 @@
 @import '@bolt/components-site';
 @import '@bolt/components-ordered-list';
 @import '@bolt/components-unordered-list';
+@import '@bolt/components-navbar';
 @import '@bolt/components-teaser'; // tiny amount of styling
 // @import '@bolt/components-chip-list'; // No styles
 // @import '@bolt/components-critical-path'; // No styles
