--- a/src/_patterns/02-components/bolt-icon/src/icon.twig
+++ b/src/_patterns/02-components/bolt-icon/src/icon.twig
@@ -7,6 +7,7 @@
   .setAttribute("name", name)
   .setAttribute("background", background)
   .setAttribute("size", size)
+  .setAttribute("color", color)
 %}
 
 <bolt-icon {{ attributes }}></bolt-icon>
