--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -9,6 +9,7 @@
 @import '@bolt/components-blockquote';
 @import '@bolt/components-card';
 @import '@bolt/components-chip';
+@import '@bolt/components-figure';
 @import '@bolt/components-background';
 @import '@bolt/components-color-swatch';
 @import '@bolt/components-headline';
