--- a/src/_patterns/01-core/05-objects/bolt-flag-object/src/_flag.scss
+++ b/src/_patterns/01-core/05-objects/bolt-flag-object/src/_flag.scss
@@ -5,8 +5,7 @@
 
 $bolt-flag-sizes: (
   'small',
-  'medium',
-  'large'
+  'medium'
 );
 
 $bolt-flag-alignments: (
@@ -17,26 +16,25 @@ $bolt-flag-alignments: (
 
 
 .o-bolt-flag {
-  display: table;
-  width: 100%;
+  // display: table;
+  // width: 100%;
+  @include bolt-margin-bottom(medium);
+  display: flex;
+  align-items: flex-start;
 }
 
 .o-bolt-flag__body {
-  display: table-cell;
-  width: 100%;
-  vertical-align: top;
+  flex: 1;
 }
 
 
-.o-bolt-flag__image {
-  display: table-cell;
-  vertical-align: top;
+// .o-bolt-flag__figure {
 
-  // .o-bolt-flag--rev & {
-  //   padding-right: 0;
-  //   padding-left: $spacing-unit;
-  // }
-}
+//   // .o-bolt-flag--rev & {
+//   //   padding-right: 0;
+//   //   padding-left: $spacing-unit;
+//   // }
+// }
 
 
 
@@ -63,21 +61,22 @@ $bolt-flag-alignments: (
 //   vertical-align: bottom;
 // }
 // // Flag alignment
-// @each $alignment in $bolt-flag-alignments {
-//   .o-bolt-flag--#{$alignment} > * {
-//     vertical-align: $alignment;
-//     @include bolt-padding-right($size);
-//   }
-// }
+@each $alignment, $value in $bolt-flag-alignments {
+  .o-bolt-flag--#{$alignment} {
+    align-items: $value;
+    vertical-align: $alignment;
+  }
+}
 
 
 
 // Flag sizes
 @each $size in $bolt-flag-sizes {
-  .o-bolt-flag--#{$size} > .o-bolt-flag__image {
-    @include bolt-padding-right($size);
+  .o-bolt-flag--#{$size} > .o-bolt-flag__figure {
+    @include bolt-margin-right($size);
   }
 }
+
 
 
 
