--- a/src/_patterns/04-pages/d8-product-landing/d8-product-landing.twig
+++ b/src/_patterns/04-pages/d8-product-landing/d8-product-landing.twig
@@ -12,11 +12,11 @@
     full: true,
     theme: "dark",
     background: {
-      opacity: "heavy",
+      opacity: "medium",
       fill: "gradient",
       focalPoint: {
         vertical: "center",
-        horizontal: "center"
+        horizontal: "right"
       },
       contentItems: [{
         pattern: "image",
@@ -24,15 +24,18 @@
       }]
     },
     primaryTeaser: {
-      eyebrow: {
-        text: "Products",
-        icon: {
-          name: "arrow-left",
-          position: "before"
-        },
-        url: "pega.com"
-      },
       headlines: [
+        {
+          type: "headline",
+          text: "Products",
+          size: "xsmall",
+          tag: "span",
+          url: "pega.com",
+          icon: {
+            name: "arrow-left",
+            position: "before"
+          }
+        },
         {
           type: "headline",
           text: "CRM Applications for Real-Time Engagement",
@@ -42,7 +45,7 @@
         {
           type: "subheadline",
           text: "Pega’s AI powered CRM Suite is transforming the way enterprises drive greater engagement across the entire customer journey.",
-          size: "xxlarge",
+          size: "xlarge",
           tag: "p"
         }
       ],
@@ -67,7 +70,7 @@
 
     {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
 
-      {% cell "u-bolt-width-1/1 u-bolt-width-1/2@small" %}
+      {% cell "o-u-bolt-width-1/1 u-bolt-width-1/2@small" %}
         {% include "@bolt/headline.twig" with {
           text: "Explore the Pega CRM Suite",
           size: "xxlarge"
@@ -85,58 +88,150 @@
             {
               contentItems: [
                 {
-                  "pattern": "headline",
-                  "size": "large",
-                  "text": "Marketing",
-                  "url": "https://www.google.com",
-                  "icon": {
-                    name: "chevron-right"
-                  }
-                },
-                {
-                  "pattern": "text",
-                  "text": "Engage customers with real-time 1:1 marketing on any channel.",
-                  "size": "medium",
+                  pattern: "flag",
+                  valign: "middle",
+                  url: "https://www.google.com",
+                  figure: {
+                    "icon": {
+                      name: "app-development",
+                      size: "xlarge",
+                      background: "circle",
+                      color: "teal"
+                    }
+                  },
+                  items: [
+                    {
+                      "pattern": "headline",
+                      "size": "large",
+                      "text": "Marketing",
+                      "url": "https://www.google.com",
+                      "icon": {
+                        name: "chevron-right"
+                      }
+                    },
+                    {
+                      "pattern": "text",
+                      "text": "Engage customers with real-time 1:1 marketing on any channel.",
+                      "size": "medium",
+                    }
+                  ]
                 }
               ]
             },
             {
               contentItems: [
                 {
-                  "pattern": "headline",
-                  "size": "large",
-                  "text": "Marketing",
-                  "url": "https://www.google.com",
-                  "icon": {
-                    name: "chevron-right"
-                  }
-                },
-                {
-                  "pattern": "text",
-                  "text": "Engage customers with real-time 1:1 marketing on any channel.",
-                  "size": "medium",
+                  pattern: "flag",
+                  valign: "middle",
+                  url: "https://www.google.com",
+                  figure: {
+                    "icon": {
+                      name: "sales-automation",
+                      size: "xlarge",
+                      background: "circle",
+                      color: "teal"
+                    }
+                  },
+                  items: [
+                    {
+                      "pattern": "headline",
+                      "size": "large",
+                      "text": "Sales Automation",
+                      "url": "https://www.google.com",
+                      "icon": {
+                        name: "chevron-right"
+                      }
+                    },
+                    {
+                      "pattern": "text",
+                      "text": "Intelligently guide sales professionals and automate the sales process.",
+                      "size": "medium",
+                    }
+                  ]
                 }
               ]
             },
             {
               contentItems: [
                 {
-                  "pattern": "headline",
-                  "size": "large",
-                  "text": "Marketing",
-                  "url": "https://www.google.com",
-                  "icon": {
-                    name: "chevron-right"
-                  }
-                },
-                {
-                  "pattern": "text",
-                  "text": "Engage customers with real-time 1:1 marketing on any channel.",
-                  "size": "medium",
+                  pattern: "flag",
+                  valign: "middle",
+                  url: "https://www.google.com",
+                  figure: {
+                    "icon": {
+                      name: "customer-service",
+                      size: "xlarge",
+                      background: "circle",
+                      color: "teal"
+                    }
+                  },
+                  items: [
+                    {
+                      "pattern": "headline",
+                      "size": "large",
+                      "text": "Customer Service",
+                      "url": "https://www.google.com",
+                      "icon": {
+                        name: "chevron-right"
+                      }
+                    },
+                    {
+                      "pattern": "text",
+                      "text": "Serve, satisfy and engage every customer with digital customer service.",
+                      "size": "medium",
+                    }
+                  ]
                 }
               ]
             }
           ]
+        } only %}
+      {% endcell %}
+
+    {% endgrid %}
+
+
+  {% endblock %}
+{% endembed %}
+
+
+
+
+
+{% embed "@bolt/band.twig" with {
+  size: "medium",
+  theme: "xlight",
+  fullBleed: true
+} only %}
+  {% block band_content %}
+
+    {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
+        {% include "@bolt/image.twig" with {
+          src: "/images/sample/decision-hub-chart.png"
+        } only %}
+      {% endcell %}
+
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-5/12@small" %}
+        {% include "@bolt/headline.twig" with {
+          text: "Customer Decision Hub",
+          size: "xxxlarge",
+          tag: "h2"
+        } only %}
+        {% include "@bolt/subheadline.twig" with {
+          text: "Infuse real-time AI into every customer engagement",
+          size: "xlarge",
+          tag: "p"
+        } only %}
+        {% include "@bolt/text.twig" with {
+          text: "There’s nothing artificial about Pega’s proven AI. This always-on brain gets results. Using pragmatic artificial intelligence and decision management, you can improve response rates by up to 6X, NPS by 30 points, and get ROI as high as 500%.",
+          size: "medium"
+        } only %}
+        {% include "@bolt/button.twig" with {
+          text: "Call to Action",
+          url: "www.google.com"
         } only %}
       {% endcell %}
 
@@ -154,28 +249,33 @@
   "contentItems": [
     {
       "pattern": "card",
-      "contentItems": [
-        {
-          "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg"
+      "image": {
+        "src": "/images/sample/anthem-video.jpg"
+      },
+      "teaser": {
+        "eyebrow": {
+          text: "Article"
         },
-        {
-          "pattern": "headline",
-          "text": "2017 Forrester Wave Report",
-          "size": "large",
-          "tag": "h3"
+        "logo": {
+          src: "/images/sample/PayPal-logo.svg"
         },
-        {
-          "pattern": "text",
-          "text": "Pega cited as a Leader in The Forrester Wave™: Digital Process Automation Software, Q3 2017."
-        },
-        {
-          "pattern": "button",
-          "width": "full",
-          "text": "Get the report",
-          "style": "text"
-        }
-      ]
+        "headlines": [
+          {
+            "type": "headline",
+            "text": "Gartner Magic Quadrant for the CRM Customer Engagement Center",
+            "size": "large"
+          }
+        ],
+        "content": "Simplify and automate to reduce costs and improve agility.",
+        "buttons": [
+          {
+            "text": "Learn More",
+            "style": "secondary",
+            "url": "www.google.com/pega7",
+            "width": "full"
+          }
+        ]
+      }
     },
     {
       "pattern": "card",
@@ -189,7 +289,7 @@
         "headlines": [
           {
             "type": "headline",
-            "text": "Headline #2",
+            "text": "Gartner Magic Quadrant for the CRM Customer Engagement Center",
             "size": "large"
           }
         ],
@@ -200,170 +300,190 @@
             "style": "secondary",
             "url": "www.google.com/pega7",
             "width": "full"
-          },
-          {
-            "text": "About Pega",
-            "style": "secondary",
-            "url": "www.google.com/pega7",
-            "width": "full"
           }
         ]
       }
     },
     {
       "pattern": "card",
-      "contentItems": [
-        {
-          "pattern": "image",
-          "src": "/images/sample/artificial-intelligence-image.jpg"
+      "image": {
+        "src": "/images/sample/anthem-video.jpg"
+      },
+      "teaser": {
+        "eyebrow": {
+          text: "Article"
         },
-        {
-          "pattern": "teaser",
-          "headlines": [
-            {
-              "type": "headline",
-              "text": "Headline #3",
-              "size": "large"
-            }
-          ],
-          "content": "Simplify and automate to reduce costs and improve agility.",
-          "buttons": [
-            {
-              "text": "Learn More About Pega 7",
-              "style": "text",
-              "url": "www.google.com/pega7",
-              "width": "full"
-            }
-          ]
-        }
-      ]
+        "headlines": [
+          {
+            "type": "headline",
+            "text": "Gartner Magic Quadrant for the CRM Customer Engagement Center",
+            "size": "large"
+          }
+        ],
+        "content": "Simplify and automate to reduce costs and improve agility.",
+        "buttons": [
+          {
+            "text": "Learn More",
+            "style": "secondary",
+            "url": "www.google.com/pega7",
+            "width": "full"
+          }
+        ]
+      }
     }
   ]
 } %}
   {% block band_content %}
-    {% include "@bolt/headline.twig" with {
-      text: "What's Trending",
-      size: "xlarge",
-      tag: "h3"
-    } only %}
+    
+
+
+   {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--matrix u-bolt-margin-bottom" %}
+
+      {% cell "u-bolt-flex-grow" %}
+
+        {% grid %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-3/4@small" %}
+            {% include "@bolt/headline.twig" with {
+              text: "Analyst Reports",
+              size: "xlarge",
+              tag: "h3"
+            } only %}
+          {% endcell %}
+        {% endgrid %}
+      {% endcell %}
+
+
+      {% cell %}
+        {% include "@bolt/text.twig" with {
+          text: "See all analyst reports",
+          size: "small",
+          weight: "bold",
+          tag: "p",
+          url: "pega.com",
+          icon: {
+            name: "chevron-right",
+            position: "after"
+          }
+        } only %}
+      {% endcell %}
+
+    {% endgrid %}
+
+
     {{ parent() }}
   {% endblock band_content %}
 {% endembed %}
 
 
 
+{% embed "@bolt/band.twig" with {
+  size: "medium",
+  theme: "xdark",
+  fullBleed: true,
+  background: {
+    "opacity": "heavy",
+    "fill": "color",
+    "focalPoint": {
+      "vertical": "center",
+      "horizontal": "center"
+    },
+    "contentItems": [
+      {
+        "pattern": "image",
+        "src": "/images/sample/background-banner--left-focal-point.jpg"
+      }
+    ]
+  }
+} only %}
+  {% block band_content %}
+    
+    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--center" %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small u-bolt-text-align-center" %}
+
+
+
+        {% include "@bolt/blockquote.twig" with {
+          size: "xlarge",
+          border: "horizontal",
+          alignItems: "center",
+          logo: {
+            src: "/images/sample/PayPal-logo.svg",
+            invert: true
+          },
+          author: {
+            image: {
+              src: "/images/placeholders/500x500.jpg"
+            },
+            name: "Jessica Cuthbertson",
+            title: "CEO, RBS"
+          },
+          content: "<p>We’re creating an environment where we know our customers individually, and we want to use what we know to really understand what’s important to them – so we can be there in the moments that matter.</p>"
+        } only %}
+
+
+        {% include "@bolt/text.twig" with {
+          text: "Watch Birgit König, Ph.D., CEO, Allianz Health Germany, share how the Pega platform meets rapidly changing customer expectations."
+        } only %}
+
+        {% include "@bolt/button.twig" with {
+          text: "Call to Action",
+          url: "www.google.com",
+          style: "secondary"
+        } only %}
+
+        
+      {% endcell %}
+    {% endgrid %}
+  {% endblock %}
+{% endembed %}
+
+
+
+
 
 
 {% embed "@bolt/band.twig" with {
-  size: "medium",
+  size: "small",
   theme: "xdark",
   fullBleed: true
 } only %}
   {% block band_content %}
 
-      {% grid "o-bolt-grid--matrix o-bolt-grid--large" %}
+    {% grid "o-bolt-grid--flex o-bolt-grid--middle o-bolt-grid--matrix" %}
 
-        {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
-          {% include "@bolt/image.twig" with {
-            src: "/images/sample/salesforce-v-pega.png"
-          } only %}
-        {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-3/4@small u-bolt-flex-grow" %}
 
-        {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
+        {% grid %}
+          {% cell "u-bolt-width-1/1 u-bolt-width-3/4@small" %}
+            {% include "@bolt/headline.twig" with {
+              text: "See How Pega Can Help Your Business",
+              size: "xlarge"
+            } only %}
+            {% include "@bolt/text.twig" with {
+              text: "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris."
+            } only %}
+          {% endcell %}
+        {% endgrid %}
+      {% endcell %}
 
-          {% grid %}
 
-            {% cell "u-bolt-width-1/1 u-bolt-width-3/4@small" %}
+      {% cell "u-bolt-width-1/1@only-small" %}
+        {% include "@bolt/button.twig" with {
+          text: "Call to action",
+          width: "full",
+          size: "medium"
+        } only %}
+      {% endcell %}
 
-              {% include "@bolt/headline.twig" with {
-                text: "There’s a real alternative to the Salesforce.com hype: Pega CRM.",
-                size: "xlarge",
-                tag: "h3"
-              } only %}
+    {% endgrid %}
 
-              {% include "@bolt/paragraph.twig" with {
-                text: "Considering Salesforce.com? Don’t fall for the hype. See why today’s leading enterprises choose Pega CRM."
-              } only %}
-
-              {% include "@bolt/button.twig" with {
-                text: "Get Real",
-                style: "primary",
-                size: small
-              } only %}
-
-            {% endcell %}
-          {% endgrid %}
-
-        {% endcell %}
-      {% endgrid %}
 
   {% endblock %}
 {% endembed %}
 
 
 
-{% embed "@bolt/band.twig" with {
-  size: "medium",
-  theme: "dark",
-  fullBleed: true
-} only %}
-  {% block band_content %}
-    {% include "@bolt/action-blocks.twig" with {
-      attributes: {
-        class: [
-          "c-bolt-action-blocks--max-8"
-        ]
-      },
-  "contentItems": [
-    {
-      text: "Product Information",
-      url: "http://google.com",
-      icon: {
-        name: "product"
-      }
-    },
-    {
-      text: "Industry Solutions",
-      url: "http://google.com",
-      icon: {
-        name: "industries"
-      }
-    },
-    {
-      text: "Training and Certification",
-      url: "http://google.com",
-      icon: {
-        name: "training",
-        background: "circle"
-      }
-    },
-    {
-      text: "Vision and Technology",
-      url: "http://google.com",
-      icon: {
-        name: "vision",
-        background: "circle"
-      }
-    },
-    {
-      text: "Services and Partners",
-      url: "http://google.com",
-      icon: {
-        name: "partners",
-        background: "square"
-      }
-    },
-    {
-      text: "Career Opportunities",
-      url: "http://google.com",
-      icon: {
-        name: "careers",
-        background: "square"
-      }
-    }
-  ]
-} only %}
-  {% endblock %}
-{% endembed %}
+
+
 
 {% endblock %}
