--- a/src/_patterns/02-components/bolt-band/src/band.twig
+++ b/src/_patterns/02-components/bolt-band/src/band.twig
@@ -1,11 +1,12 @@
 {% set tags = ["div", "article", "section", "heading", "footer", "nav", "figure"] %} {# Available overall container tags #}
 {% set contentTags = ["div", "article", "section", "heading", "footer", "nav", "figcaption"] %} {# Available content container tags #}
 {% set fullBleed = [true, false] %}
-{% set themes = ["dark", "xlight", "light", "dark", "xdark"] %}
+{% set themes = ["xlight", "light", "dark", "xdark"] %}
 {% set prefix = "c-bolt-" %}
 
 {# Allowed Band Sizes #}
 {% set sizes = [
+  "xsmall",
   "small",
   "medium",
   "large"
