WIP: navbar title styles

--- a/src/_patterns/02-components/bolt-band/src/band.scss
+++ b/src/_patterns/02-components/bolt-band/src/band.scss
@@ -36,8 +36,8 @@
 }
 
 .c-bolt-band--xsmall {
-  @include bolt-padding-top(small);
-  @include bolt-padding-bottom(small);
+  @include bolt-padding-top(xsmall);
+  @include bolt-padding-bottom(xsmall);
 }
 
 .c-bolt-band--full {
