--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -35,7 +35,7 @@
 
     {% block band_background %}
       {% include "@bolt/background.twig" with {
-        "opacity": "medium",
+        "opacity": "light",
         "fill": "gradient",
         "focalPoint":
         {
@@ -50,26 +50,32 @@
 
       <nav class="c-bolt-navbar">
         <div class="c-bolt-navbar__title">
-          {% include "@bolt/icon.twig" with {
-            "name": title.icon.name,
-            "size": "large"
-          } only %}
-          {% include "@bolt/text.twig" with {
-            "size": "large",
-            "weight": "semibold",
-            "tag": "h1",
-            "text": title.text
-          } only %}
+          <div class="c-bolt-navbar__title-item">
+            {% include "@bolt/icon.twig" with {
+              "name": title.icon.name,
+              "size": "large"
+            } only %}
+          </div>
+          <div class="c-bolt-navbar__title-item">
+            {% include "@bolt/text.twig" with {
+              "size": "large",
+              "weight": "semibold",
+              "tag": "h1",
+              "text": title.text
+            } only %}
+          </div>
         </div>
-        <ul class="c-bolt-navbar__items">
-          {% for item in navItems %}
-            <li class="c-bolt-navbar__item">
-              <a class="c-bolt-navbar__link" href="#{{ item.url }}" name="{{ item.url }}">
-                {{ item.text }}
-              </a>
-            </li>
-          {% endfor %}
-        </ul>
+        <div class="c-bolt-navbar__nav">
+          <ul class="c-bolt-nav-list">
+            {% for item in navItems %}
+              <li class="c-bolt-nav-list__item">
+                <a class="c-bolt-nav-list__item-link" href="#{{ item.url }}" name="{{ item.url }}">
+                  {{ item.text }}
+                </a>
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
       </nav>
     {% endblock %}
 
