WIP: json organization

--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -67,7 +67,7 @@
         </div>
         <div class="c-bolt-navbar__nav">
           <ul class="c-bolt-nav-list">
-            {% for item in navItems %}
+            {% for item in links %}
               <li class="c-bolt-nav-list__item">
                 <a class="c-bolt-nav-list__item-link" href="#{{ item.url }}" name="{{ item.url }}">
                   {{ item.text }}
