WIP: stashing changes

--- a/src/_patterns/02-components/components.scss
+++ b/src/_patterns/02-components/components.scss
@@ -8,6 +8,7 @@
 @import '@bolt/components-button-group';
 @import '@bolt/components-blockquote';
 @import '@bolt/components-card';
+@import '@bolt/components-device-viewer';
 @import '@bolt/components-chip';
 @import '@bolt/components-figure';
 @import '@bolt/components-background';
